--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 <body>
 	<h1 class="episodes__title">Star Wars Episodes</h1>
-	<section id="episodes-container" class="episodes-container">
-	</section>
+	<ul id="episodes-container" class="episodes-container">
+		<li class="">
+			
+		</li>
+	</ul>
 </body>
 </html>
