--- a/episodes-list-page.html
+++ b/episodes-list-page.html
@@ -7,11 +7,12 @@
 
 	<script defer type="module" src="js/episodes-list.js"></script>
 </head>
-<body>
+<body style="background-color: #000;">
 	<h1 class="episodes__title">Star Wars Episodes</h1>
 	<ul id="episodes-container" class="episodes-container">
-		<li class="">
-			
+		<li class="episode">
+			<span class="episode__number">1</span>
+			<h1 class="episode__title">Title</h1>
 		</li>
 	</ul>
 </body>
